summarize changes in jaxb

--- a/demo-jaxb/src/main/resources/application.properties
+++ b/demo-jaxb/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://test:1234@my-first-mongo-cluster.csy4e.mongodb.net/demo_spring_boot?retryWrites=true&w=majority
+#Just run commandline
+spring.main.web-application-type=NONE
