--- a/mongo-with-seed/mongo-initdb.yaml
+++ b/mongo-with-seed/mongo-initdb.yaml
@@ -12,11 +12,18 @@ data:
         user: "reportsUser",
         pwd: "12345678",
         roles: [
-           { role: "read", db: "reporting" },
-           { role: "read", db: "products" },
-           { role: "read", db: "sales" },
-           { role: "readWrite", db: "accounts" }
+          { role: "read", db: "reporting" },
+          { role: "read", db: "products" },
+          { role: "read", db: "sales" },
+          { role: "readWrite", db: "accounts" }
         ]
       }
     )
     EOF
+  mongo-seed.sh: |
+    mongoimport \
+    --db demo-data \
+    --collection users \
+    --type json \
+    --file /demo-data/users.json \
+    --jsonArray
